Archive2/83/638d3b3ffa4a69/output
main.cpp: In instantiation of 'struct heap<main()::A>':
main.cpp:20:13:   required from here
main.cpp:7:46: error: no match for 'operator>' (operand types are 'main()::A' and 'main()::A')
     static_assert( sizeof( std::declval<T>() > std::declval<T>() ) < 2, ""  ) ;
                                              ^
